--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -15,6 +15,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
+
+
+p.sfsymbol {margin: 0.0px 0.0px 0.0px 0.0px; font: 20.0px 'SF Pro'}
 
 html {
   scroll-behavior: smooth;
